<resources>
    <string name="app_name">Introtuce User</string>
    <string name="tab_text_1">Users</string>
    <string name="tab_text_2">Enroll</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="select_profile_photo">Select Profile Photo</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="phone_number">Phone Number</string>
    <string name="home_town">Home Town</string>
    <string name="add_user">Add User</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="user_full_name">User Full Name</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
</resources>