<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginTop="5dp"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp" >

            <androidx.cardview.widget.CardView
                android:id="@+id/image_layout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profile_view"
                    android:src="@mipmap/ic_launcher"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:hint="@string/user_full_name"
                app:layout_constraintStart_toEndOf="@+id/image_layout"
                app:layout_constraintTop_toTopOf="@+id/image_layout"/>



            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/gender"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="@+id/full_name"
                app:layout_constraintTop_toBottomOf="@+id/full_name"/>

            <View
                app:layout_constraintTop_toTopOf="@+id/gender"
                app:layout_constraintBottom_toBottomOf="@+id/gender"
                app:layout_constraintStart_toEndOf="@+id/gender"
                android:id="@+id/view"
                android:background="@color/black"
                android:layout_marginStart="3dp"
                android:layout_width="1dp"
                android:layout_height="0dp"/>

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginStart="3dp"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/full_name"/>

            <View
                app:layout_constraintTop_toTopOf="@+id/age"
                app:layout_constraintBottom_toBottomOf="@+id/age"
                app:layout_constraintStart_toEndOf="@+id/age"
                android:id="@+id/view1"
                android:background="@color/black"
                android:layout_marginStart="3dp"
                android:layout_width="1dp"
                android:layout_height="0dp"/>

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="3dp"
                app:layout_constraintStart_toEndOf="@+id/view1"
                app:layout_constraintTop_toBottomOf="@+id/full_name"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/delete"
                android:visibility="gone"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/image_layout"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_baseline_delete_24"
                app:layout_constraintTop_toTopOf="@+id/image_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>